@@ -216,11 +216,11 @@ function TODO($msg) { echo "TODO: ".$msg.SBR; }  // DEBUG INFO!!!
 			{
 				for ( 	$curr_node = &$node_data;
 					$curr_node['masterid'] != 0 &&
-					$curr_node['masterid'] != $ZBX_CURRENT_NODEID;
+					(bccomp($curr_node['masterid'] , $ZBX_CURRENT_NODEID) != 0);
 					$curr_node = &$ZBX_NODES[$curr_node['masterid']]
 				);
 
-				if ( $curr_node['masterid'] == $ZBX_CURRENT_NODEID )
+				if (bccomp($curr_node['masterid'],$ZBX_CURRENT_NODEID) == 0 )
 				{
 					$ZBX_CURRENT_SUBNODES[$nodeid] = $nodeid;
 				}
@@ -295,7 +295,6 @@ function TODO($msg) { echo "TODO: ".$msg.SBR; }  // DEBUG INFO!!!
 
 		include_once "include/page_footer.php";
 	}
-
 
 	function zbx_stripslashes($value){
 		if(is_array($value)){
