@@ -63,7 +63,7 @@
 				$result = DBexecute('insert into users_groups (id,usrgrpid,userid)'.
 					'values('.$users_groups_id.','.$groupid.','.$userid.')');
 
-				if($result == false) break;
+				if(!$result) break;
 			}
 			if($result)
 			{
@@ -76,7 +76,7 @@
 						zbx_dbstr($media_data['sendto']).','.$media_data['active'].','.$media_data['severity'].','.
 						zbx_dbstr($media_data['period']).')');
 
-					if($result == false) break;
+					if(!$result) break;
 				}
 			}
 		}
@@ -109,7 +109,7 @@
 				$result = DBexecute('insert into users_groups (id,usrgrpid,userid)'.
 					'values('.$users_groups_id.','.$groupid.','.$userid.')');
 
-				if($result == false) break;
+				if(!$result) break;
 			}
 			if($result)
 			{
@@ -122,7 +122,7 @@
 						zbx_dbstr($media_data['sendto']).','.$media_data['active'].','.$media_data['severity'].','.
 						zbx_dbstr($media_data['period']).')');
 
-					if($result == false) break;
+					if(!$result) break;
 				}
 			}
 		}
@@ -137,7 +137,7 @@
 	{
 		global $USER_DETAILS;
 
-		if($userid!=$USER_DETAILS["userid"])
+		if((bccomp($userid,$USER_DETAILS["userid"]) != 0))
 		{
 			access_deny();
 		}
